@@ -1,5 +1,6 @@
 Version 1.1.0-CVS (?? ??? 2005)
   - Fixed the following bug reports on SourceForge:
+      1424413: calling upcoming.php as include doesn't work after 02/03/06
       1410156: Pop ups displaying incorrectly in IE6
       1427068: SMTP mail doesn't accept admin authorization settings
       1425311: saving system setting requires 2x clicks at the save-button
