@@ -1,4 +1,5 @@
 Version 1.1.0-CVS (?? ??? 2005)
+ - Fixed bug 1424413: calling upcoming.php as include doesn't work after 02/03/06
  - Moved all common images into images folder
  - Added optional lunar phases to month.php
  - Fixed bug 1410156: Pop ups displaying incorrectly in IE6
